Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29184

Assertion `0' in Item_row::illegal_method_call, Type_handler_row::Item_update_null_value, Item::update_null_value

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6, 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
    • 11.6.2, 11.7.1, 10.6.21, 10.11.11, 11.4.5
    • Server
    • None

    Description

      Possibly related to MDEV-24634

      SELECT INTERVAL(0, ROW(1,1), 1, 1, 1, 1, 1, 1, 1) AS f;
      

      10.3 bd935a41

      mysqld: /data/src/10.3/sql/item_row.cc:32: void Item_row::illegal_method_call(const char*): Assertion `0' failed.
      220727 21:09:17 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f59d1c78662 in __GI___assert_fail (assertion=0x563ac8e11fe0 "0", file=0x563ac8e12250 "/data/src/10.3/sql/item_row.cc", line=32, function=0x563ac8e122c0 "void Item_row::illegal_method_call(const char*)") at assert.c:101
      #8  0x0000563ac84181a8 in Item_row::illegal_method_call (this=0x7f59b0012ef8, method=0x563ac8e121e5 "val") at /data/src/10.3/sql/item_row.cc:32
      #9  0x0000563ac8418d79 in Item_row::val_real (this=0x7f59b0012ef8) at /data/src/10.3/sql/item_row.h:67
      #10 0x0000563ac83a9bcc in Item_func_interval::fix_length_and_dec (this=0x7f59b0013590) at /data/src/10.3/sql/item_cmpfunc.cc:1899
      #11 0x0000563ac83e369d in Item_func::fix_fields (this=0x7f59b0013590, thd=0x7f59b0000d90, ref=0x7f59b0013678) at /data/src/10.3/sql/item_func.cc:370
      #12 0x0000563ac83a97fd in Item_func_interval::fix_fields (this=0x7f59b0013590, thd=0x7f59b0000d90, ref=0x7f59b0013678) at /data/src/10.3/sql/item_cmpfunc.cc:1843
      #13 0x0000563ac7f3560c in Item::fix_fields_if_needed (this=0x7f59b0013590, thd=0x7f59b0000d90, ref=0x7f59b0013678) at /data/src/10.3/sql/item.h:829
      #14 0x0000563ac7f35641 in Item::fix_fields_if_needed_for_scalar (this=0x7f59b0013590, thd=0x7f59b0000d90, ref=0x7f59b0013678) at /data/src/10.3/sql/item.h:833
      #15 0x0000563ac7faf2d4 in setup_fields (thd=0x7f59b0000d90, ref_pointer_array=..., fields=..., column_usage=MARK_COLUMNS_READ, sum_func_list=0x7f59b0013a58, pre_fix=0x7f59b0005518, allow_sum_func=true) at /data/src/10.3/sql/sql_base.cc:7542
      #16 0x0000563ac8081085 in JOIN::prepare (this=0x7f59b0013740, tables_init=0x0, wild_num=0, conds_init=0x0, og_num=0, order_init=0x0, skip_order_by=false, group_init=0x0, having_init=0x0, proc_param_init=0x0, select_lex_arg=0x7f59b00053d8, unit_arg=0x7f59b0004c40) at /data/src/10.3/sql/sql_select.cc:1167
      #17 0x0000563ac808c8ec in mysql_select (thd=0x7f59b0000d90, tables=0x0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7f59b0013718, unit=0x7f59b0004c40, select_lex=0x7f59b00053d8) at /data/src/10.3/sql/sql_select.cc:4344
      #18 0x0000563ac807dec7 in handle_select (thd=0x7f59b0000d90, lex=0x7f59b0004b80, result=0x7f59b0013718, setup_tables_done_option=0) at /data/src/10.3/sql/sql_select.cc:372
      #19 0x0000563ac8044eaa in execute_sqlcom_select (thd=0x7f59b0000d90, all_tables=0x0) at /data/src/10.3/sql/sql_parse.cc:6340
      #20 0x0000563ac803b8b2 in mysql_execute_command (thd=0x7f59b0000d90) at /data/src/10.3/sql/sql_parse.cc:3871
      #21 0x0000563ac80491aa in mysql_parse (thd=0x7f59b0000d90, rawbuf=0x7f59b0012c20 "SELECT INTERVAL(0, ROW(1,1), 1, 1, 1, 1, 1, 1, 1) AS f", length=54, parser_state=0x7f59cc4a05b0, is_com_multi=false, is_next_command=false) at /data/src/10.3/sql/sql_parse.cc:7871
      #22 0x0000563ac80359df in dispatch_command (command=COM_QUERY, thd=0x7f59b0000d90, packet=0x7f59b0008f31 "SELECT INTERVAL(0, ROW(1,1), 1, 1, 1, 1, 1, 1, 1) AS f", packet_length=54, is_com_multi=false, is_next_command=false) at /data/src/10.3/sql/sql_parse.cc:1852
      #23 0x0000563ac803439d in do_command (thd=0x7f59b0000d90) at /data/src/10.3/sql/sql_parse.cc:1398
      #24 0x0000563ac81b19e8 in do_handle_one_connection (connect=0x563acbc66170) at /data/src/10.3/sql/sql_connect.cc:1403
      #25 0x0000563ac81b1753 in handle_one_connection (arg=0x563acbc66170) at /data/src/10.3/sql/sql_connect.cc:1308
      #26 0x0000563ac8b61866 in pfs_spawn_thread (arg=0x563acbd66a40) at /data/src/10.3/storage/perfschema/pfs.cc:1869
      #27 0x00007f59d1e11ea7 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #28 0x00007f59d1d41def in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      SELECT INTERVAL(0, (SELECT 1, 1), 1, 1, 1, 1, 1, 1, 1) AS f;
      

      10.3 bd935a41

      mysqld: /data/src/10.3/sql/item.h:1652: virtual void Item::update_null_value(): Assertion `0' failed.
      220727 21:10:33 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f308c743662 in __GI___assert_fail (assertion=0x55c097253210 "0", file=0x55c097253212 "/data/src/10.3/sql/item.h", line=1652, function=0x55c097253318 "virtual void Item::update_null_value()") at assert.c:101
      #8  0x000055c096532607 in Item::update_null_value (this=0x7f3074013ac8) at /data/src/10.3/sql/item.h:1652
      #9  0x000055c096a55aca in Item_subselect::is_null (this=0x7f3074013ac8) at /data/src/10.3/sql/item_subselect.h:189
      #10 0x000055c0969b29fd in Item_func_interval::fix_length_and_dec (this=0x7f3074014268) at /data/src/10.3/sql/item_cmpfunc.cc:1869
      #11 0x000055c0969ec69d in Item_func::fix_fields (this=0x7f3074014268, thd=0x7f3074000d90, ref=0x7f3074014350) at /data/src/10.3/sql/item_func.cc:370
      #12 0x000055c0969b27fd in Item_func_interval::fix_fields (this=0x7f3074014268, thd=0x7f3074000d90, ref=0x7f3074014350) at /data/src/10.3/sql/item_cmpfunc.cc:1843
      #13 0x000055c09653e60c in Item::fix_fields_if_needed (this=0x7f3074014268, thd=0x7f3074000d90, ref=0x7f3074014350) at /data/src/10.3/sql/item.h:829
      #14 0x000055c09653e641 in Item::fix_fields_if_needed_for_scalar (this=0x7f3074014268, thd=0x7f3074000d90, ref=0x7f3074014350) at /data/src/10.3/sql/item.h:833
      #15 0x000055c0965b82d4 in setup_fields (thd=0x7f3074000d90, ref_pointer_array=..., fields=..., column_usage=MARK_COLUMNS_READ, sum_func_list=0x7f3074014730, pre_fix=0x7f3074005518, allow_sum_func=true) at /data/src/10.3/sql/sql_base.cc:7542
      #16 0x000055c09668a085 in JOIN::prepare (this=0x7f3074014418, tables_init=0x0, wild_num=0, conds_init=0x0, og_num=0, order_init=0x0, skip_order_by=false, group_init=0x0, having_init=0x0, proc_param_init=0x0, select_lex_arg=0x7f30740053d8, unit_arg=0x7f3074004c40) at /data/src/10.3/sql/sql_select.cc:1167
      #17 0x000055c0966958ec in mysql_select (thd=0x7f3074000d90, tables=0x0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7f30740143f0, unit=0x7f3074004c40, select_lex=0x7f30740053d8) at /data/src/10.3/sql/sql_select.cc:4344
      #18 0x000055c096686ec7 in handle_select (thd=0x7f3074000d90, lex=0x7f3074004b80, result=0x7f30740143f0, setup_tables_done_option=0) at /data/src/10.3/sql/sql_select.cc:372
      #19 0x000055c09664deaa in execute_sqlcom_select (thd=0x7f3074000d90, all_tables=0x0) at /data/src/10.3/sql/sql_parse.cc:6340
      #20 0x000055c0966448b2 in mysql_execute_command (thd=0x7f3074000d90) at /data/src/10.3/sql/sql_parse.cc:3871
      #21 0x000055c0966521aa in mysql_parse (thd=0x7f3074000d90, rawbuf=0x7f3074012c20 "SELECT INTERVAL(0, (SELECT 1, 1), 1, 1, 1, 1, 1, 1, 1) AS f", length=59, parser_state=0x7f308676a5b0, is_com_multi=false, is_next_command=false) at /data/src/10.3/sql/sql_parse.cc:7871
      #22 0x000055c09663e9df in dispatch_command (command=COM_QUERY, thd=0x7f3074000d90, packet=0x7f3074008f31 "SELECT INTERVAL(0, (SELECT 1, 1), 1, 1, 1, 1, 1, 1, 1) AS f", packet_length=59, is_com_multi=false, is_next_command=false) at /data/src/10.3/sql/sql_parse.cc:1852
      #23 0x000055c09663d39d in do_command (thd=0x7f3074000d90) at /data/src/10.3/sql/sql_parse.cc:1398
      #24 0x000055c0967ba9e8 in do_handle_one_connection (connect=0x55c098e04170) at /data/src/10.3/sql/sql_connect.cc:1403
      #25 0x000055c0967ba753 in handle_one_connection (arg=0x55c098e04170) at /data/src/10.3/sql/sql_connect.cc:1308
      #26 0x000055c09716a866 in pfs_spawn_thread (arg=0x55c098f04a40) at /data/src/10.3/storage/perfschema/pfs.cc:1869
      #27 0x00007f308c8dcea7 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #28 0x00007f308c80cdef in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.10 5ab5ff08

      mariadbd: /data/src/10.10/sql/sql_type.cc:4241: virtual void Type_handler_row::Item_update_null_value(Item*) const: Assertion `0' failed.
      220727 21:11:47 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f4a85084662 in __GI___assert_fail (assertion=0x55e053c0596f "0", file=0x55e053c08b18 "/data/src/10.10/sql/sql_type.cc", line=4241, function=0x55e053c0ae20 "virtual void Type_handler_row::Item_update_null_value(Item*) const") at assert.c:101
      No locals.
      #8  0x000055e053093f6a in Type_handler_row::Item_update_null_value (this=0x55e05478fec0 <type_handler_row>, item=0x7f4a64016958) at /data/src/10.10/sql/sql_type.cc:4241
              __PRETTY_FUNCTION__ = "virtual void Type_handler_row::Item_update_null_value(Item*) const"
      #9  0x000055e052c75c64 in Item::update_null_value (this=0x7f4a64016958) at /data/src/10.10/sql/item.h:2065
      No locals.
      #10 0x000055e0532d1fb4 in Item_subselect::is_null (this=0x7f4a64016958) at /data/src/10.10/sql/item_subselect.h:190
      No locals.
      #11 0x000055e053208297 in Item_func_interval::fix_length_and_dec (this=0x7f4a64017038, thd=0x7f4a64000db8) at /data/src/10.10/sql/item_cmpfunc.cc:1883
              el = 0x7f4a64016958
              i = 1
              not_null_consts = true
              rows = 9
      #12 0x000055e05323f15b in Item_func::fix_fields (this=0x7f4a64017038, thd=0x7f4a64000db8, ref=0x7f4a64017108) at /data/src/10.10/sql/item_func.cc:359
              __PRETTY_FUNCTION__ = "virtual bool Item_func::fix_fields(THD*, Item**)"
              arg = 0x7f4a640170b8
              arg_end = 0x7f4a640170b8
              buff = " \345\"\200J\177\000\000\260\345\"\200J\177\000\000\b\000\000\000\340U\000\000\340\f\000dJ\177\000\000\b\000\000\000J\177\000\000\340\f\000dJ\177\000\000@\343\"\200J\177\000\000\253y\246S\340U\000\000@\343\"\200J\177\000\000\340\f\000d\000\000\000\000'6\374S\340U\000\000\000\000\000\000\000\000\000\000`\343\"\200J\177\000\000\213{\243S\340U\000\000p\343\"\200J\177\000\000\213{\243S\340U\000\000\200\343\"\200J\177\000\000\267|\243S\340U\000\000\220\343\"\200J\177\000\000`\v\000dJ\177\000\000\240\343\"\200J\177\000\000\271E\246S\340U\000\000\340\f\000dJ\177\000\000\270\f\000dJ\177\000\000\320\343\"\200J\177\000\000"...
      #13 0x000055e053208093 in Item_func_interval::fix_fields (this=0x7f4a64017038, thd=0x7f4a64000db8, ref=0x7f4a64017108) at /data/src/10.10/sql/item_cmpfunc.cc:1857
      No locals.
      #14 0x000055e052cce95a in Item::fix_fields_if_needed (this=0x7f4a64017038, thd=0x7f4a64000db8, ref=0x7f4a64017108) at /data/src/10.10/sql/item.h:1144
      No locals.
      #15 0x000055e052cce98f in Item::fix_fields_if_needed_for_scalar (this=0x7f4a64017038, thd=0x7f4a64000db8, ref=0x7f4a64017108) at /data/src/10.10/sql/item.h:1148
      No locals.
      #16 0x000055e052d511fc in setup_fields (thd=0x7f4a64000db8, ref_pointer_array={m_array = 0x7f4a64017fb8, m_size = 14}, fields=@0x7f4a64015958: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x7f4a64017100, last = 0x7f4a64017100, elements = 1}, <No data fields>}, column_usage=MARK_COLUMNS_READ, sum_func_list=0x7f4a64017d68, pre_fix=0x7f4a64015970, allow_sum_func=true) at /data/src/10.10/sql/sql_base.cc:7974
              item = 0x7f4a64017038
              saved_column_usage = MARK_COLUMNS_READ
              save_allow_sum_func = {buffer = {0}}
              it = {<base_list_iterator> = {list = 0x7f4a64015958, el = 0x7f4a64017100, prev = 0x7f4a64015958, current = 0x7f4a64017100}, <No data fields>}
              save_is_item_list_lookup = true
              make_pre_fix = true
              _db_stack_frame_ = {func = 0x55e053b8e177 "JOIN::prepare", file = 0x55e053b8dca0 "/data/src/10.10/sql/sql_select.cc", level = 2147483656, line = -1, prev = 0x7f4a8022e6a0}
              __PRETTY_FUNCTION__ = "bool setup_fields(THD*, Ref_ptr_array, List<Item>&, enum_column_usage, List<Item>*, List<Item>*, bool)"
              li = {<base_list_iterator> = {list = 0x7f4a64006160, el = 0x55e054764040 <end_of_list>, prev = 0x7f4a64006160, current = 0x55e054764040 <end_of_list>}, <No data fields>}
              var = 0x0
              ref = {m_array = 0x7f4a64017fb8, m_size = 14}
      #17 0x000055e052e5c01c in JOIN::prepare (this=0x7f4a640179d8, tables_init=0x0, conds_init=0x0, og_num=0, order_init=0x0, skip_order_by=false, group_init=0x0, having_init=0x0, proc_param_init=0x0, select_lex_arg=0x7f4a640156b8, unit_arg=0x7f4a640051f0) at /data/src/10.10/sql/sql_select.cc:1435
              _db_stack_frame_ = {func = 0x55e053b8eeb7 "mysql_select", file = 0x55e053b8dca0 "/data/src/10.10/sql/sql_select.cc", level = 2147483655, line = -1, prev = 0x7f4a8022e820}
              trace_wrapper = {<Json_writer_struct> = {_vptr.Json_writer_struct = 0x55e0543fcd30 <vtable for Json_writer_object+16>, my_writer = 0x0, context = {writer = 0x0}, closed = false}, <No data fields>}
              trace_prepare = {<Json_writer_struct> = {_vptr.Json_writer_struct = 0x55e0543fcd30 <vtable for Json_writer_object+16>, my_writer = 0x0, context = {writer = 0x0}, closed = false}, <No data fields>}
              trace_steps = {<Json_writer_struct> = {_vptr.Json_writer_struct = 0x55e0543fcd10 <vtable for Json_writer_array+16>, my_writer = 0x0, context = {writer = 0x0}, closed = false}, <No data fields>}
              tbl = 0x0
              li = {<base_list_iterator> = {list = 0x7f4a640158d0, el = 0x55e054764040 <end_of_list>, prev = 0x0, current = 0x0}, <No data fields>}
              real_og_num = 0
              __PRETTY_FUNCTION__ = "int JOIN::prepare(TABLE_LIST*, COND*, uint, ORDER*, bool, ORDER*, Item*, ORDER*, SELECT_LEX*, SELECT_LEX_UNIT*)"
              save_place = NO_MATTER
              with_clause = 0x7f4a640179d8
              with_elem = 0x7f4a8022e6c0
              res = -2145196448
      #18 0x000055e052e6944e in mysql_select (thd=0x7f4a64000db8, tables=0x0, fields=@0x7f4a64015958: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x7f4a64017100, last = 0x7f4a64017100, elements = 1}, <No data fields>}, conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7f4a640179b0, unit=0x7f4a640051f0, select_lex=0x7f4a640156b8) at /data/src/10.10/sql/sql_select.cc:5025
              err = 0
              free_join = true
              _db_stack_frame_ = {func = 0x55e053b8dd88 "handle_select", file = 0x55e053b8dca0 "/data/src/10.10/sql/sql_select.cc", level = 2147483654, line = -1, prev = 0x7f4a8022e8e0}
              join = 0x7f4a640179d8
      #19 0x000055e052e58824 in handle_select (thd=0x7f4a64000db8, lex=0x7f4a64005118, result=0x7f4a640179b0, setup_tables_done_option=0) at /data/src/10.10/sql/sql_select.cc:581
              unit = 0x7f4a640051f0
              res = false
              select_lex = 0x7f4a640156b8
              _db_stack_frame_ = {func = 0x55e053b7a1d0 "mysql_execute_command", file = 0x55e053b79490 "/data/src/10.10/sql/sql_parse.cc", level = 2147483653, line = -1, prev = 0x7f4a8022ef30}
      #20 0x000055e052e00de5 in execute_sqlcom_select (thd=0x7f4a64000db8, all_tables=0x0) at /data/src/10.10/sql/sql_parse.cc:6260
              save_protocol = 0x0
              lex = 0x7f4a64005118
              result = 0x7f4a640179b0
              res = false
              __PRETTY_FUNCTION__ = "bool execute_sqlcom_select(THD*, TABLE_LIST*)"
      #21 0x000055e052df8050 in mysql_execute_command (thd=0x7f4a64000db8, is_called_from_prepared_stmt=false) at /data/src/10.10/sql/sql_parse.cc:3944
              privileges_requested = SELECT_ACL
              res = 0
              up_result = 0
              lex = 0x7f4a64005118
              select_lex = 0x7f4a640156b8
              first_table = 0x0
              all_tables = 0x0
              unit = 0x7f4a640051f0
              have_table_map_for_update = false
              rpl_filter = 0x55e054401d68 <vtable for Internal_error_handler+16>
              _db_stack_frame_ = {func = 0x55e053b7b567 "mysql_parse", file = 0x55e053b79490 "/data/src/10.10/sql/sql_parse.cc", level = 2147483652, line = -1, prev = 0x7f4a8022f380}
              __PRETTY_FUNCTION__ = "int mysql_execute_command(THD*, bool)"
              ots = {ctx = 0x7f4a64004db0, traceable = false}
              orig_binlog_format = BINLOG_FORMAT_MIXED
              orig_current_stmt_binlog_format = BINLOG_FORMAT_STMT
      #22 0x000055e052e05b6f in mysql_parse (thd=0x7f4a64000db8, rawbuf=0x7f4a640155e0 "SELECT INTERVAL(0, (SELECT 1, 1), 1, 1, 1, 1, 1, 1, 1) AS f", length=59, parser_state=0x7f4a8022f500) at /data/src/10.10/sql/sql_parse.cc:8036
              found_semicolon = 0x0
              error = 32586
              lex = 0x7f4a64005118
              err = false
              _db_stack_frame_ = {func = 0x55e053b79a11 "dispatch_command", file = 0x55e053b79490 "/data/src/10.10/sql/sql_parse.cc", level = 2147483651, line = -1, prev = 0x7f4a8022f4e0}
              __PRETTY_FUNCTION__ = "void mysql_parse(THD*, char*, uint, Parser_state*)"
      #23 0x000055e052df2127 in dispatch_command (command=COM_QUERY, thd=0x7f4a64000db8, packet=0x7f4a6400b9f9 "SELECT INTERVAL(0, (SELECT 1, 1), 1, 1, 1, 1, 1, 1, 1) AS f", packet_length=59, blocking=true) at /data/src/10.10/sql/sql_parse.cc:1894
              packet_end = 0x7f4a6401561b ""
              parser_state = {m_lip = {lookahead_token = -1, lookahead_yylval = 0x0, m_thd = 0x7f4a64000db8, m_ptr = 0x7f4a6401561c "\004", m_tok_start = 0x7f4a6401561c "\004", m_tok_end = 0x7f4a6401561c "\004", m_end_of_query = 0x7f4a6401561b "", m_tok_start_prev = 0x7f4a6401561b "", m_buf = 0x7f4a640155e0 "SELECT INTERVAL(0, (SELECT 1, 1), 1, 1, 1, 1, 1, 1, 1) AS f", m_buf_length = 59, m_echo = true, m_echo_saved = false, m_cpp_buf = 0x7f4a64015678 "SELECT INTERVAL(0, (SELECT 1, 1), 1, 1, 1, 1, 1, 1, 1) AS f", m_cpp_ptr = 0x7f4a640156b3 "", m_cpp_tok_start = 0x7f4a640156b3 "", m_cpp_tok_start_prev = 0x7f4a640156b3 "", m_cpp_tok_end = 0x7f4a640156b3 "", m_body_utf8 = 0x0, m_body_utf8_ptr = 0x164000cb8 <error: Cannot access memory at address 0x164000cb8>, m_cpp_utf8_processed_ptr = 0x0, next_state = MY_LEX_END, found_semicolon = 0x0, ignore_space = false, stmt_prepare_mode = false, multi_statements = true, yylineno = 1, m_digest = 0x0, in_comment = NO_COMMENT, in_comment_saved = (unknown: 0x10000), m_cpp_text_start = 0x7f4a640156b2 "f", m_cpp_text_end = 0x7f4a640156b3 "", m_underscore_cs = 0x0}, m_yacc = {yacc_yyss = 0x0, yacc_yyvs = 0x0, m_set_signal_info = {m_item = {0x0 <repeats 13 times>}}, m_lock_type = TL_READ_DEFAULT, m_mdl_type = MDL_SHARED_READ}, m_digest_psi = 0x7f4a64004b40}
              net = 0x7f4a640010f0
              error = false
              do_end_of_statement = true
              _db_stack_frame_ = {func = 0x55e053b79695 "do_command", file = 0x55e053b79490 "/data/src/10.10/sql/sql_parse.cc", level = 2147483650, line = -1, prev = 0x7f4a8022fdc0}
              drop_more_results = false
              __PRETTY_FUNCTION__ = "dispatch_command_return dispatch_command(enum_server_command, THD*, char*, uint, bool)"
              __FUNCTION__ = "dispatch_command"
              res = <optimized out>
      #24 0x000055e052df0b22 in do_command (thd=0x7f4a64000db8, blocking=true) at /data/src/10.10/sql/sql_parse.cc:1407
              return_value = (DISPATCH_COMMAND_CLOSE_CONNECTION | unknown: 0x80000000)
              packet = 0x7f4a6400b9f8 "\003SELECT INTERVAL(0, (SELECT 1, 1), 1, 1, 1, 1, 1, 1, 1) AS f"
              packet_length = 60
              net = 0x7f4a640010f0
              command = COM_QUERY
              _db_stack_frame_ = {func = 0x55e053fcbbe1 "?func", file = 0x55e053fcbbe7 "?file", level = 2147483649, line = -1, prev = 0x0}
              __PRETTY_FUNCTION__ = "dispatch_command_return do_command(THD*, bool)"
              __FUNCTION__ = "do_command"
      #25 0x000055e052fc8e0c in do_handle_one_connection (connect=0x55e056dbce38, put_in_cache=true) at /data/src/10.10/sql/sql_connect.cc:1418
              create_user = true
              thr_create_utime = 5367619216012
              thd = 0x7f4a64000db8
              __PRETTY_FUNCTION__ = "void do_handle_one_connection(CONNECT*, bool)"
      #26 0x000055e052fc8aab in handle_one_connection (arg=0x55e056dbf818) at /data/src/10.10/sql/sql_connect.cc:1312
              connect = 0x55e056dbf818
      #27 0x000055e0534c5750 in pfs_spawn_thread (arg=0x55e056dbc9a8) at /data/src/10.10/storage/perfschema/pfs.cc:2201
              typed_arg = 0x55e056dbc9a8
              user_arg = 0x55e056dbf818
              user_start_routine = 0x55e052fc8a50 <handle_one_connection(void*)>
              pfs = 0x7f4a849785c0
              klass = 0x55e0567f5540
      #28 0x00007f4a8554eea7 in start_thread (arg=<optimized out>) at pthread_create.c:477
              ret = <optimized out>
              pd = <optimized out>
              unwind_buf = {cancel_jmp_buf = {{jmp_buf = {139957954086656, -5644582258960425592, 140729120195710, 140729120195711, 139957954084736, 311296, 5710399480230124936, 5710389499279383944}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
              not_first_call = 0
      #29 0x00007f4a8514ddef in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Non-debug builds in all cases return ER_OPERAND_COLUMNS 1241: Operand should contain 1 column(s).

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.5h
                  3.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.